--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>AI 539 數據中心 v147</title>
+    <title>AI 539 數據中心 v148</title>
     <style>
         :root { --bg: #000; --panel: #1c1c1e; --primary: #ffd60a; --success: #32d74b; --border: #38383a; --text: #fff; --sub: #8e8e93; }
         body { font-family: -apple-system, system-ui, sans-serif; background: var(--bg); color: var(--text); margin: 0; padding: 12px; }
@@ -13,8 +13,8 @@
         .panel-header::after { content: ''; flex: 1; height: 1px; background: var(--border); }
         .ball-row { display: flex; flex-wrap: wrap; gap: 8px; margin: 8px 0; }
         .ball { width: 34px; height: 34px; display: flex; align-items: center; justify-content: center; background: #2c2c2e; border-radius: 8px; font-weight: bold; font-size: 0.9rem; border: 1px solid var(--border); }
-        .ball.hot-core { background: var(--primary); color: #000; border: none; }
-        .ball.tail-match { border-color: var(--success); color: var(--success); }
+        .ball.core { background: var(--primary); color: #000; border: none; }
+        .ball.trap { border-color: var(--success); color: var(--success); }
         .bt-item { display: flex; justify-content: space-between; align-items: center; padding: 10px 0; border-bottom: 1px solid #2c2c2e; }
         .hit-count { color: var(--success); font-weight: bold; font-size: 1.2rem; }
     </style>
@@ -23,19 +23,19 @@
 
 <div class="container">
     <div class="panel">
-        <div class="panel-header">數據注入 (v147)</div>
+        <div class="panel-header">數據注入 (v148)</div>
         <input type="file" id="csvFile" style="width:100%; color:var(--sub);" accept=".csv">
     </div>
 
     <div id="mainDisplay" style="display:none;">
         <div style="display:grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap:15px;">
             <div class="panel">
-                <div class="panel-header">下期預測 (集結 8 碼)</div>
-                <p style="font-size:0.7rem; color:var(--sub);">黃色:熱核 | 綠色:同尾磁吸補位</p>
+                <div class="panel-header">下期預測 (連動 8 碼)</div>
+                <p style="font-size:0.7rem; color:var(--sub);">黃色:核心 | 綠色:斷層連動/連號陷阱</p>
                 <div id="finalCombo" class="ball-row"></div>
             </div>
             <div class="panel">
-                <div class="panel-header">回測紀錄 (強化集彈性)</div>
+                <div class="panel-header">回測紀錄 (攻堅命中4)</div>
                 <div id="btContainer"></div>
             </div>
         </div>
@@ -58,8 +58,8 @@
         reader.readAsText(e.target.files[0]);
     });
 
-    function getV147Pick(hist) {
-        if(hist.length < 5) return {res:[], core:[], tails:[]};
+    function getV148Pick(hist) {
+        if(hist.length < 5) return {res:[], core:[], traps:[]};
         const last = hist[hist.length-1].nums;
         let pool = [];
         for (let i=1; i<=39; i++) {
@@ -67,40 +67,56 @@
             for(let j=hist.length-1; j>=0; j--) { if(!hist[j].nums.includes(i)) gap++; else break; }
             let score = 0;
             if(gap <= 2) score += 5000;
-            if(last.some(ln => Math.abs(ln-i) === 1)) score += 6000; // 強化斜連
+            if(last.some(ln => Math.abs(ln-i) === 1)) score += 6000;
             pool.push({n: i, gap: gap, sc: score});
         }
 
-        // 1. 選出 2 顆最強熱核 (Core)
-        let core = pool.sort((a,b) => b.sc - a.sc).slice(0, 2).map(p => p.n);
+        // 1. 熱核 (Core): 3碼
+        let core = pool.sort((a,b) => b.sc - a.sc).slice(0, 3).map(p => p.n);
         let coreTails = core.map(n => n % 10);
 
-        // 2. 磁吸同尾 (Tail Match)
-        let matched = pool.filter(p => !core.includes(p.n) && coreTails.includes(p.n % 10) && p.gap <= 12)
-                          .sort((a,b) => b.sc - a.sc).slice(0, 2).map(p => p.n);
+        // 2. 斷層連動 (Mirror/Tail): 2碼 (鎖定與熱核異區的同尾)
+        let coreAvg = core.reduce((a,b)=>a+b, 0) / 3;
+        let mirrors = pool.filter(p => !core.includes(p.n) && coreTails.includes(p.n % 10))
+                          .sort((a,b) => {
+                              let zoneDistA = Math.abs(a.n - coreAvg) > 15 ? 5000 : 0;
+                              let zoneDistB = Math.abs(b.n - coreAvg) > 15 ? 5000 : 0;
+                              return (b.sc + zoneDistB) - (a.sc + zoneDistA);
+                          }).slice(0, 2).map(p => p.n);
 
-        // 3. 軌道平衡補位 (Balance)
-        let res = [...core, ...matched];
-        let remaining = pool.filter(p => !res.includes(p.n))
-                            .sort((a,b) => b.sc - a.sc);
-        
-        for(let p of remaining) { if(res.length < 8) res.push(p.n); }
+        // 3. 連號陷阱 (Serial): 2碼
+        let traps = [];
+        let serialPool = pool.filter(p => !core.includes(p.n) && !mirrors.includes(p.n))
+                             .sort((a,b) => b.sc - a.sc);
+        for(let p of serialPool) {
+            if(traps.length < 2) {
+                let neighbor = p.n + 1;
+                if(neighbor > 39) neighbor = p.n - 1;
+                if(!core.includes(neighbor) && !mirrors.includes(neighbor)) {
+                    traps.push(p.n, neighbor);
+                }
+            }
+        }
 
-        return { res: res.sort((a,b)=>a-b), core, tails: matched };
+        let res = [...new Set([...core, ...mirrors, ...traps])];
+        let remaining = pool.filter(p => !res.includes(p.n)).sort((a,b)=>b.sc - a.sc);
+        while(res.length < 8) { res.push(remaining.shift().n); }
+
+        return { res: res.sort((a,b)=>a-b), core, traps: [...mirrors, ...traps] };
     }
 
     function render() {
         const btContainer = document.getElementById('btContainer');
         btContainer.innerHTML = '';
         for (let i = state.data.length - 1; i >= Math.max(0, state.data.length - 10); i--) {
-            const pred = getV147Pick(state.data.slice(0, i));
+            const pred = getV148Pick(state.data.slice(0, i));
             const real = state.data[i].nums;
             const hits = pred.res.filter(n => real.includes(n));
             btContainer.innerHTML += `<div class="bt-item"><div><span style="color:var(--sub)">${state.data[i].date.slice(5)}</span><br><span style="font-size:0.8rem">${real.join(' ')}</span></div><div class="hit-count">${hits.length}</div></div>`;
         }
-        const final = getV147Pick(state.data);
+        const final = getV148Pick(state.data);
         document.getElementById('finalCombo').innerHTML = final.res.map(n => {
-            let cls = final.core.includes(n) ? 'hot-core' : (final.tails.includes(n) ? 'tail-match' : '');
+            let cls = final.core.includes(n) ? 'core' : (final.traps.includes(n) ? 'trap' : '');
             return `<div class="ball ${cls}">${n}</div>`;
         }).join('');
         document.getElementById('mainDisplay').style.display = 'block';
